src/objects/PB_AssociatedDoc__c.object
<CustomObject>
    <fields>
        <fullName>DocPacket__c</fullName>
        <label>DocPacket</label>
        <referenceTo>PB_DocPacket__c</referenceTo>
        <relationshipLabel>AssociatedDocs</relationshipLabel>
        <relationshipName>AssociatedDocuments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document</label>
        <referenceTo>PB_Document__c</referenceTo>
        <relationshipLabel>AssociatedDocs</relationshipLabel>
        <relationshipName>AssociatedDocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Calculated based on PBS&apos;s Admission Start Date or Entered (If &quot;Other&quot; in Due)</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsAdded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAdded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sObject_Id__c</fullName>
        <label>sObject Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Type__c</fullName>
        <label>sObject Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Assignment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PB_AssociatedDoc</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AssociatedDocs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>